# pylau-app-flask

./: -- SQLite.sql  .gitignore  6.1.0  README  application.py  apptest.py  cookies.py  dashboard.js  dashboard_class.js  fix_git_ref_head_error.bat  full_requirements.txt  hsts_prevent.py  install_application.bat  install_libraries.sh  login.html  pyproject.toml  requirements.txt  script.json  sitemap.xml  test_code.py  test_conf.py  test_conn_heroku.py  test_csrf.py  testt.html  text.html  vault_conf.py  web_socket.py
__code_ideas__/: git_automate_process.py  myTest_code.py  web_socket.py
app/: __init__.py  __init_v1.py  app_conf.py  blue_prints.py  db_conf.py  dependencies.py  routes.py
app/admin_module/: adminView.py  bp_admin_view.py
app/adminmodule/: adminView.py  bp_admin_view.py
app/api/: __init__.py  bp_api.py  csrf_token.py  json_factory.py
app/auth_login_module/: __init__.py
app/auth_module/: __init__.py
app/auth_package/: __init__.py  auth_social.py
app/author_profile/: __init__.py  author_profile_view.py  bp_author_profile.py
app/configs/: __init__.py  config.py  jwt_config.py  smtp_config.py
app/configs_package/: __init__.py
app/email_module/: __init__.py
app/models/: convert_text_speech_to_audio.py  deep_seek.py  docx_factory.py  extract_files_content.py  file_factory.py  openai_api.py  pdf_reader_factory.py
app/package_auditapp/: bp_auditapp.py
app/package_blog/: __init__.py  bp_blog.py
app/package_code_editor/: bp_editor_view.py  code_editor_factory.py
app/package_comments/: comments.py  study_notes.py
app/templates/: form  (+28 more)
application/: __init__.py
code_tests__/: test.py
core/: 2init__.py  __init__.py  app.py  bpcomponents.py  routes.py
instance/: dataframe.db  dtuning.db  sqliteproject.db  test.db  test3.db  test4.db  testdb.db  truncate table in sqlite.txt  truncate_table_in_sqlite.sql
tests/: conftest.py  mtest_csrf_security.py  mtest_database.py  mtest_hello.py  test_auth.py  test_factory.py  test_get_delete_product.py  test_post_product.py  test_update_product.py  xss_securitytest.py
tests_app/: conftest.py  test_database.py  test_factory.py
trash/: sql_alchemy.py
(+691 files in other folders)
